--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: "3.8"
 
 services:
   # Nginx Service
@@ -6,9 +6,8 @@ services:
     image: nginx:alpine
     container_name: nginx-proxy
     ports:
-      - "8081:8081"  # b2bApitest - PHP 8.2
-      - "8080:8080"  # project1 - PHP 8.2
-      - "8001:8001"  # Project 1 - PHP 8.2
+      - "8686:8686" # erp - PHP 7.4
+      - "8080:8080" # project1 - PHP 8.2
     restart: unless-stopped
     volumes:
       - ./nginx/conf.d:/etc/nginx/conf.d
@@ -30,6 +29,16 @@ services:
     networks:
       - app-network
 
+  php74:
+    build:
+      context: ./php-versions/php74
+      dockerfile: Dockerfile
+    container_name: php74
+    restart: unless-stopped
+    volumes:
+      - ./projects:/var/www/projects
+    networks:
+      - app-network
 networks:
   app-network:
     driver: bridge
