--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: "3.8"
 
 services:
   # Nginx Service
@@ -6,6 +5,8 @@ services:
     image: nginx:alpine
     container_name: nginx-proxy
     ports:
+      - "9803:9803"  # mongodbTaskFlow - PHP 8.3
+      - "9802:9802"  # task_flow - PHP 8.2
       - "9998:9998"  # test-12 - PHP 8.2
       - "9999:9999"  # designPatterns - PHP 8.2
       - "8000:8000" # cb_portal_api - PHP 8.2
@@ -23,6 +24,19 @@ services:
       - php82
     networks:
       - app-network
+
+
+  # PHP 8.3 Service
+  # php83:
+  #   build:
+  #     context: ./php-versions/php83
+  #     dockerfile: Dockerfile
+  #   container_name: php83
+  #   restart: unless-stopped
+  #   volumes:
+  #     - ./projects:/var/www/projects
+  #   networks:
+  #     - app-network
 
   # PHP 8.2 Service
   php82:
@@ -69,6 +83,31 @@ services:
     restart: unless-stopped
     networks:
       - app-network
+
+  # mongo:
+  #   image: mongo
+  #   restart: always
+  #   ports:
+  #     - 27017:27017
+  #   environment:
+  #     MONGO_INITDB_ROOT_USERNAME: root
+  #     MONGO_INITDB_ROOT_PASSWORD: example
+  #   networks:
+  #     - app-network
+
+  # mongo-express:
+  #   image: mongo-express
+  #   restart: always
+  #   ports:
+  #     - 8081:8081
+  #   environment:
+  #     ME_CONFIG_MONGODB_ADMINUSERNAME: root
+  #     ME_CONFIG_MONGODB_ADMINPASSWORD: example
+  #     ME_CONFIG_MONGODB_URL: mongodb://root:example@mongo:27017/
+  #     ME_CONFIG_BASICAUTH: false
+  #   networks:
+  #     - app-network
+
 
 networks:
   app-network:
