--- a/nginx/conf.d/b2bApi.conf
+++ b/nginx/conf.d/b2bApi.conf
@@ -18,12 +18,17 @@ server {
 
     location ~ \.php$ {
         fastcgi_pass php82:9000;
+        fastcgi_request_buffering off;
         fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
         include fastcgi_params;
         fastcgi_index index.php;
-        fastcgi_buffers 16 16k;
-        fastcgi_buffer_size 32k;
+        fastcgi_buffers 16 128k;
+        fastcgi_buffer_size 256k;
+        client_body_buffer_size 256M;
         fastcgi_read_timeout 600;
+        fastcgi_send_timeout 600;
+        client_body_timeout 600;
+        # fastcgi_request_buffering off;
     }
 
     location ~ /\.(?!well-known).* {
