--- a/php-versions/php83/Dockerfile
+++ b/php-versions/php83/Dockerfile
@@ -1,4 +1,4 @@
-FROM php:8.2-fpm
+FROM php:8.3-fpm
 
 # Install system dependencies
 RUN apt-get update && apt-get install -y \
@@ -9,26 +9,18 @@ RUN apt-get update && apt-get install -y \
     libxml2-dev \
     zip \
     unzip \
-    ghostscript \
-    libfreetype6-dev \
-    libjpeg62-turbo-dev \
-    libwebp-dev \
-    libzip-dev
+    libssl-dev \
+    pkg-config \
+    libcurl4-openssl-dev
 
 # Clear cache
 RUN apt-get clean && rm -rf /var/lib/apt/lists/*
 
 # Install PHP extensions
-RUN docker-php-ext-install pdo_mysql mbstring exif pcntl bcmath gd zip
+RUN docker-php-ext-install pdo_mysql mbstring exif pcntl bcmath gd
 
-# Cấu hình PHP cho upload file
-RUN echo "file_uploads = On\n" \
-    "memory_limit = 256M\n" \
-    "upload_max_filesize = 100M\n" \
-    "post_max_size = 100M\n" \
-    "max_execution_time = 600\n" \
-    "max_input_time = 600\n" \
-    > /usr/local/etc/php/conf.d/uploads.ini
+RUN pecl install mongodb && \
+    docker-php-ext-enable mongodb
 
 # Create system user to run Composer and Artisan Commands
 RUN useradd -G www-data,root -u 1000 -d /home/www www
